--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       </div>
      </div>
 <!-- .........2nd.... -->
-<video controls muted>
+<video controls muted style="height:150px width:100px">
   <source src="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcRZyWgdnP0yiBW4WhQCxW0K1lrbmBXj5AWYag">
+  
   
 </video>
