--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
       </div>
      </div>
 <!-- .........2nd.... -->
-<video controls muted style="height:150px width:100px">
+<video controls muted>
   <source src="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcRZyWgdnP0yiBW4WhQCxW0K1lrbmBXj5AWYag">
-  
   
 </video>
